fix titleを修正 add Twitter用のOGPを追加

--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>LINEに移動</title>
+  <title>ハーミリア アイドルオーディション</title>
   <meta http-equiv="refresh" content="0; URL=https://lin.ee/k15ZZMx">
   <meta property="og:image" content="/img/lineqr_usagi.png">
+  <meta property="og:title" content="ハーミリア アイドルオーディション">
+  <meta property="og:description" content="⋆⸜ メンバー募集中 ⸝‍⋆ オーディション応募はこちらから！">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="/img/lineqr_usagi.png">
+  <meta name="twitter:title" content="ハーミリア アイドルオーディション">
+  <meta name="twitter:description" content="⋆⸜ メンバー募集中 ⸝‍⋆ オーディション応募はこちらから！">
 </head>
 <body>
   <p>このページは自動的にリダイレクトします。</p>
