--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>ハーミリア アイドルオーディション</title>
-  <meta http-equiv="refresh" content="0; URL=https://lin.ee/k15ZZMx">
-  <meta property="og:image" content="/img/lineqr_usagi.png">
-  <meta property="og:title" content="ハーミリア アイドルオーディション">
-  <meta property="og:description" content="⋆⸜ メンバー募集中 ⸝‍⋆ オーディション応募はこちらから！">
+    <meta charset="UTF-8">
+    <!-- Primary Meta Tags -->
+    <title>ハーミリア アイドルオーディション</title>
+    <meta name="title" content="ハーミリア アイドルオーディション" />
+    <meta name="description" content="⋆⸜ メンバー募集中 ⸝‍⋆ オーディション応募はこちらから！" />
 
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="/img/lineqr_usagi.png">
-  <meta name="twitter:title" content="ハーミリア アイドルオーディション">
-  <meta name="twitter:description" content="⋆⸜ メンバー募集中 ⸝‍⋆ オーディション応募はこちらから！">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://x.gd/lxWwu" />
+    <meta property="og:title" content="ハーミリア アイドルオーディション" />
+    <meta property="og:description" content="⋆⸜ メンバー募集中 ⸝‍⋆ オーディション応募はこちらから！" />
+    <meta property="og:image" content="https://t-custom.github.io/img/lineqr_usagi.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://x.gd/lxWwu" />
+    <meta property="twitter:title" content="ハーミリア アイドルオーディション" />
+    <meta property="twitter:description" content="⋆⸜ メンバー募集中 ⸝‍⋆ オーディション応募はこちらから！" />
+    <meta property="twitter:image" content="https://t-custom.github.io/img/lineqr_usagi.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
 </head>
 <body>
   <p>このページは自動的にリダイレクトします。</p>
